# blockchain_app

./: .env  .env.development  .env.production  .gitignore  .gitmodules  README.md  package.json  pyproject.toml  requirements.txt  server.js
bchain/: bchain.py  pow.py
data/: appliances_list.pickle
public/data/: event_numbers_1.json  event_numbers_10.json  event_numbers_11.json  event_numbers_12.json  event_numbers_13.json  event_numbers_14.json  event_numbers_15.json  event_numbers_2.json  event_numbers_3.json  event_numbers_4.json  event_numbers_5.json  event_numbers_6.json  event_numbers_7.json  event_numbers_8.json  event_numbers_9.json  events_1.json  events_10.json  events_11.json  events_12.json  events_13.json  events_14.json  events_15.json  events_2.json  events_3.json  events_4.json  events_5.json  events_6.json  events_7.json  events_8.json  events_9.json  power_composition_1.json  power_composition_10.json  power_composition_11.json  power_composition_12.json  power_composition_13.json  power_composition_14.json  power_composition_15.json  power_composition_2.json  power_composition_3.json  power_composition_4.json  (+105 more)
src/: App.vue  encoder.js  main.js  mockdata.js  stringformat.js
src/components/: CellSeparator.vue  PicogridHome.vue
src/components/categorization/: EventCategorization.vue  EventNumber.vue  TableHeader.vue
src/components/hash/: EventsHash.vue
src/store/: store.js
tests/: test_pow.py
web/: app.py  generator_lock.py  queue_manager.py
web/static/css/: main.css
web/templates/: frame.html  houses.html  houses_frame.html  index.html
(+16 files in other folders)
