[tool.poetry]
name = "blockchain1"
version = "0.1.0"
description = "Blockchain Demo App"
authors = ["Gus Garcia <gcastilhos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
heroku = "^0.1.4"

[tool.poetry.dev-dependencies]
pylint = "^2.5.2"
pytest = "^5.4.2"
pytest-cov = "^2.8.1"
mypy = "^0.770"
radon = "^4.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
